--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   </head>
   <body>
 
-    <p>This is the home page for the HelloWorld Web application. </p>
-    <p>To prove that they work, you can execute either of the following links:
+    <p>This is the home page</p>
    
 
   </body>
